fix: neexistujici hodnota pro letter-spacing

--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ h3 {
 
 p {
     line-height: 1.5;
-    letter-spacing: 1em 0;
 }
 
 a {
